rough version of problem 1 and 2. Still need add explaination and description for both problems.

--- a/p8105_hw1_yw4199.md
+++ b/p8105_hw1_yw4199.md
@@ -3,3 +3,122 @@ p8105_hw1_yw4199
 Yaduo Wang
 2023-09-17
 
+\#Problem 1
+
+Load the moderndive library.
+
+``` r
+library("moderndive")
+library("tidyverse")
+```
+
+Load the early_january_weather dataset.
+
+``` r
+data("early_january_weather")
+view(early_january_weather)
+```
+
+``` r
+nrow(early_january_weather)
+```
+
+    ## [1] 358
+
+``` r
+ncol(early_january_weather)
+```
+
+    ## [1] 15
+
+``` r
+mean(early_january_weather$temp)
+```
+
+    ## [1] 39.58212
+
+Make a scatterplot of temp (y) vs time_hour (x); color points using the
+humid variable.
+
+Export your scatterplot to your project directory using ggsave.
+
+``` r
+ggplot(early_january_weather, mapping = aes(x = time_hour, y = temp, color = humid)) + geom_point()
+```
+
+![](p8105_hw1_yw4199_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+
+Export your scatterplot to your project directory using ggsave.
+
+``` r
+ggsave("p8105_hw1_yw4199_scatter_plot.pdf", height = 4, width = 6)
+```
+
+\#Problem 2
+
+Create a data frame
+
+``` r
+normal_df = tibble(
+  norm_samp = rnorm(10, mean = 1), 
+  #a random sample of size 10 from a standard Normal distribution
+  norm_samp_pos = norm_samp > 0,
+  #a logical vector indicating whether elements of the sample are greater than 0
+  vector = sample(letters, 10, replace = TRUE),
+  #a character vector of length 10
+  factor = as.factor(sample(1:3, 10, replace = TRUE))
+  #a factor vector of length 10, with 3 different factor “levels”
+)
+```
+
+Try to take the mean of each variable in your dataframe
+
+``` r
+mean(pull(normal_df, norm_samp))
+```
+
+    ## [1] 0.9627368
+
+``` r
+mean(pull(normal_df, norm_samp_pos))
+```
+
+    ## [1] 0.7
+
+``` r
+mean(pull(normal_df, vector))
+```
+
+    ## Warning in mean.default(pull(normal_df, vector)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(normal_df, factor))
+```
+
+    ## Warning in mean.default(pull(normal_df, factor)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+For vector and factor variables they return NA because they are neither
+numeric or logical. For the first numeric variable, it returns
+0.8553194; and for the second variable, since it is logical variable, it
+will treat F as 0 and T as 1 and then return the mean for all the
+values.
+
+Write a code chunk that applies the as.numeric function to the logical,
+character, and factor variables.
+
+``` r
+norm_samp_pos_num = as.numeric(normal_df$norm_samp_pos) #convert logical variable to numeric
+vector_num = as.numeric(normal_df$vector) #convert vector to numeric
+```
+
+    ## Warning: NAs introduced by coercion
+
+``` r
+factor_num = as.numeric(normal_df$factor) #convert factor to numeric
+```
