Final version of the homework.

--- a/p8105_hw1_yw4199.md
+++ b/p8105_hw1_yw4199.md
@@ -74,21 +74,22 @@ plot = ggplot(early_january_weather, mapping = aes(x = time_hour, y = temp, colo
             title = "Scatterplot of Temperature and Time Hour",
             subtitle = "Colored by Humidity"
             )
-plot
+plot #Make a scatterplot of temp (y) vs time_hour (x); color points using the humid variable.
 ```
 
 ![](p8105_hw1_yw4199_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
-
-``` r
-#Make a scatterplot of temp (y) vs time_hour (x); color points using the humid variable.
-```
 
 ``` r
 ggsave("p8105_hw1_yw4199_scatter_plot.pdf", height = 4, width = 6)
 #Export your scatterplot to your project directory using ggsave.
 ```
 
-Describe patterns that are apparent in this plot.
+Describe patterns that are apparent in this plot: This plot demonstrate
+the trend of the change of temperature with respect to time hour, and
+also consider the relation with humidity. From the plot, we can observe
+there is an overall upward trend, which indicates that as time in hours
+increases, the temperature increases. Around Jan 10 to Jan 15, it shows
+highest humidity under the temperature around 42 to 55 F.
 
 \#Problem 2
 
@@ -100,7 +101,7 @@ normal_df = tibble(
   #a random sample of size 10 from a standard Normal distribution
   norm_samp_pos = norm_samp > 0,
   #a logical vector indicating whether elements of the sample are greater than 0
-  vector = sample(letters, 10, replace = TRUE),
+  character = sample(letters, 10, replace = TRUE),
   #a character vector of length 10
   factor = as.factor(sample(1:3, 10, replace = TRUE))
   #a factor vector of length 10, with 3 different factor “levels”
@@ -110,28 +111,28 @@ normal_df = tibble(
 Try to take the mean of each variable in your dataframe
 
 ``` r
-mean(pull(normal_df, norm_samp))
+mean(pull(normal_df, norm_samp)) #mean of norm_samp
 ```
 
-    ## [1] 0.7504257
+    ## [1] 0.6608179
 
 ``` r
-mean(pull(normal_df, norm_samp_pos))
+mean(pull(normal_df, norm_samp_pos)) #mean of norm_samp_pos
 ```
 
-    ## [1] 0.8
+    ## [1] 0.6
 
 ``` r
-mean(pull(normal_df, vector))
+mean(pull(normal_df, character)) #mean of character
 ```
 
-    ## Warning in mean.default(pull(normal_df, vector)): argument is not numeric or
+    ## Warning in mean.default(pull(normal_df, character)): argument is not numeric or
     ## logical: returning NA
 
     ## [1] NA
 
 ``` r
-mean(pull(normal_df, factor))
+mean(pull(normal_df, factor)) #mean of factor
 ```
 
     ## Warning in mean.default(pull(normal_df, factor)): argument is not numeric or
@@ -139,18 +140,18 @@ mean(pull(normal_df, factor))
 
     ## [1] NA
 
-For vector and factor variables they return NA because they are neither
-numeric or logical. For the first numeric variable, it returns
-0.8553194; and for the second variable, since it is logical variable, it
-will treat F as 0 and T as 1 and then return the mean for all the
-values.
+For character and factor variables they return NA because they are
+neither numeric or logical. For the first numeric variable, it returns
+0.8553194 this time; and for the second variable, since it is logical
+variable, it will treat F as 0 and T as 1 and then return the mean for
+all the values.
 
 Write a code chunk that applies the as.numeric function to the logical,
 character, and factor variables.
 
 ``` r
 norm_samp_pos_num = as.numeric(normal_df$norm_samp_pos) #convert logical variable to numeric
-vector_num = as.numeric(normal_df$vector) #convert vector to numeric
+character_num = as.numeric(normal_df$character) #convert character to numeric
 ```
 
     ## Warning: NAs introduced by coercion
@@ -162,10 +163,10 @@ factor_num = as.numeric(normal_df$factor) #convert factor to numeric
 mean(norm_samp_pos_num) 
 ```
 
-    ## [1] 0.8
+    ## [1] 0.6
 
 ``` r
-mean(vector_num)
+mean(character_num)
 ```
 
     ## [1] NA
@@ -174,10 +175,10 @@ mean(vector_num)
 mean(factor_num)
 ```
 
-    ## [1] 2.4
+    ## [1] 1.3
 
-The norm_samp_pos_num generates 1s, and it seems no meaning corresponds
-to its original values, and its mean is 1 which is not meaningful. The
-vector_num generates all NAs, and its mean is NA. The factor_num
-generates a series of numbers corresponding to the values of their
-original vector, and its mean is 2.1.
+The norm_samp_pos_num generates 1s. This is because it treats TRUE as 1
+and FALSE as 0, and then take the mean of it. This gives you the average
+of the trues. The character_num generates all NAs. The factor_num
+generates a series of numbers corresponding to the levels of their
+original vector, and its mean is 2.1, which is not meaningful.
